# OS_Firewall

./: instructions.txt
Firewall v2/kali-firewall/: CMakeLists.txt  README.md
Firewall v2/kali-firewall/core/: logger.cpp  packet_capture.cpp  packet_capture.h  packet_info.h  rule_engine.h  traffic_shaper.cpp
Firewall v2/kali-firewall/gui/: dashboard.cpp  dashboard.h  dpi_manager.cpp  log_viewer.cpp  mainwindow.cpp  mainwindow.h
Firewall v2/kali-firewall/scripts/: install_dependencies.sh  manage.sh  setup_iptables.sh  traffic_control.sh  uninstall.sh
Firewall v2/kali-firewall/src/: main.cpp
Firewall v2/kali-firewall/src/config/: default.conf
Firewall v2/kali-firewall/tests/: unit_tests.cpp
cli-firewall/scripts/: install_firewall.sh
cli-firewall/src/: firewall.cpp  firewall.h  logger.h  packet_capture.h  rule_engine.h  rules.cpp  traffic_shaper.h  utils.h
cpp-cli-firewall/: CMakeLists.txt  README.md
cpp-cli-firewall/scripts/: check_utilities.sh  install_firewall.sh
cpp-cli-firewall/src/: dpi_engine.h  firewall.cpp  firewall.h  main.cpp  packet.h  packet_capture.cpp  packet_capture.h  rule_engine.h  rules.cpp  rules.h  traffic_shaper.h  utils.cpp
firewall-main/firewall-main/src/: main.cpp
gui/: dashboard.cpp  dpi_manager.h  log_viewer.cpp  log_viewer.h  mainwindow.cpp  mainwindow.h  rule_editor.cpp  traffic_shaper_ui.cpp  traffic_shaper_ui.h
kali-firewall/: CMakeLists.txt  Makefile  main.cpp
kali-firewall/core/: dpi_engine.cpp  dpi_engine.h  logger.cpp  logger.h  packet_capture.cpp  packet_capture.h  packet_info.h  rule_engine.cpp  rule_engine.h  traffic_shaper.cpp  traffic_shaper.h
kali-firewall/gui/: dashboard.cpp  dashboard.h  dpi_manager.cpp  dpi_manager.h  log_viewer.cpp  log_viewer.h  mainwindow.cpp  mainwindow.h  rule_editor.cpp  rule_editor.h  traffic_shaper_ui.cpp  traffic_shaper_ui.h
kali-firewall/logs/: firewall_log.db
kali-firewall/process_monitor/: proc_tracker.cpp  proc_tracker.h
kali-firewall/scripts/: install_firewall.sh  reset_iptables.sh  start_firewall.sh  stop_firewall.sh
kali-firewall/src/: main.c
kali-firewall/src/config/: default_rules.json
kali-firewall/src/firewall/: manager.c  manager.h  rules.c  rules.h
kali-firewall/src/utils/: logger.c  logger.h
kali-firewall/tests/: test_manager.c  test_rules.c
